bielik/chat/network.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: bielik
spec:
  selector:
    app: open-webui
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: open-webui
  namespace: bielik
spec:
  host: chat.apps.ocpai.lab.cloudware.pl
  to:
    kind: Service
    name: open-webui
  port:
    targetPort: http
